CSS/home.css
/* ... */
.about-us .thecont{
    background: #001730;
}
.about-us .thecont .about-box{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    
}
.about-us .thecont .about-box .box{
    height: 100%;
    background: #001730;
    padding: 20px 0;
    transition: 0.3s;
    cursor: pointer;
    transition: all 1s ease;
}
.about-us .thecont .about-box .box:hover{
    box-shadow: inset 0 100px 0 0 #e0e0e0;
    color: #fff;
}
.about-us .thecont .text-box{
    background: #1C2B4E;
    color:#ec5a5a;
    line-height: 1.8;
    position: relative;
    overflow: hidden;
    padding: 35px 40px 35px;
    transition: all 1s ease;
    height: fit-content;
    min-height: 300px;
}
.about-us .thecont .hidetextbox{
    height: 0;
    padding: 0;
    min-height: 0;
}
.about-us .thecont .text-box p{
    transform: translateX(0);
    opacity: 1;
    transition:all 0.5s ease;
    display: none;
    color: white;
    /* position: absolute; */
}
.about-us .thecont .text-box .absolute{
    position: absolute !important;
}
.about-us .thecont .about-box .box h5{
    text-align: center;
    color: #008CFC;
}
.selected-box{
    background: #1C2B4E !important;
    color: white !important;
    pointer-events: none;
}
.about-us .thecont .text-box .show-text{
    display: block;
    /* transform: translateX(0) !important;
    opacity: 1 !important; */
    /* position: absolute !important; */
    /* top: 20px;
    left: 20px; */
}


.thecont{
    margin: 0 auto;
}
@media (max-width:768px){
    .about-us .thecont .about-box .box{
        flex-basis: 100%;
    }
}
@media (max-width:992px) and (min-width:430px){
    .about-us{
        padding-top: 180px;
    }
}
@media (min-width:768px){
    .thecont{
        width: 726px;
    }
    .about-us .thecont .about-box .box{
        flex-basis: 100%;
    }
}
@media (min-width:992px){
    .thecont{
        width: 920px;
    }
    .about-us .thecont .about-box .box{
        flex-basis: 33.33%;
    }
}
@media (min-width:1200px){
    .thecont{
        width: 1170px;
    }
}










/* slider */
.carousel-item img{
    max-height: 600px;
}



/*  cards */
.container1{
    position:relative;
    width:100%;
    display:flex;
    flex-wrap: wrap;
    justify-content:space-around;
    background-image: url("../PHOTOS/about-background.jpg");
    background-size: cover;
    bottom:70px;

}
.card{
    position:relative;
}

.card .face{
    height:200px;
    width:300px;
    transition:0.5s;
}

.card .face.face1{
    position:relative;
    background:#333;
    display:flex;
    justify-content:center;
    align-items:center;
    z-index:1;
    /*transform:translateY(100px);*/
}


.card:hover .face.face1{
    background:#ff0057;
    transform:translateY(0);
}

.card .face.face1 .content{

    transition:0.5s;
}

.card .face.face1 .content img{
    max-width:100px;
}

.card .face.face1 .content h3{
    color:#0f93fc;
    text-align:center;
}

.card:hover .face.face1 .content{
    opacity:1;
}

.card .face.face2{
    position:relative;
    background:#fff;
    padding:20px;
    display:flex;
    justify-content:center;
    box-sizing:border-box;
    box-shadow:0 20px 50px rgba(0,0,0,0.8);
    transform:translateY(-100px);
}

.card:hover .face.face2{
    transform:translateY(0);
}

.card .face.face2 p{
    padding:0;
    margin:0;
    font-size: 18px;
}

.card .face.face2 a{
    margin:20px 0;
    display:inline-block;
    border:1px solid #333;
    color:#333;
    text-decoration:none;
    font-weight:900;
    padding:5px;
    transition:0.5s;
}

.card .face.face2 a:hover{
    background:#333;
    color:#fff;
}

.showcards{
    transform: translateX(0) !important;
    opacity: 1 !important;
}





/* about numbers */
.about-numbers{
    background-image: url("../PHOTOS/about-numbers.png");
    margin-top: -75px;
    background-repeat: no-repeat;
    background-position: 70% 70%;
    padding-top: 150px;
    padding-bottom: 150px;
}
.about-numbers .thecont{
    margin-top: 150px;
}
.about-numbers .thecont .space{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
.about-numbers .thecont .space .headerandboxes{
    display: flex;
    flex-direction: column;
    width: 50%;
}
.about-numbers .thecont .space .headerandboxes .heading{
    margin-top: 0px;
    color: rgb(0, 0, 0);
    
}
.about-numbers .thecont .space .headerandboxes .heading span{
    color: #1DA1F2;
}
.about-numbers .thecont .space .headerandboxes .boxescont{
    margin-top: 30px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    gap: 20px;
}
.about-numbers .thecont .space .headerandboxes  .boxescont .box{
    border-radius: 20px;
    text-align: center;
    flex-basis: calc(50% - 10px);
    background: #001730;
    color: white;
    transition: 0.5s;
}
.about-numbers .thecont .space .headerandboxes  .boxescont .box:hover{
    box-shadow: inset 0 170px 0 0 #cecccc59;
}
.about-numbers .thecont .space .headerandboxes  .boxescont .box img{
    width: 60px;
    height: 60px;
}
.about-numbers .thecont .space .number-img{
    width: 583px;
}
.about-numbers .thecont .space .number-img img{
    width: 100%;
}






@media (max-width:1200px){
    .about-numbers .thecont .space .headerandboxes  .boxescont .box{
        /* flex-basis: 33.33%; */
    }
    .about-numbers{
        background-position: 0% -50%;
    }
    .about-numbers .thecont .space{
        row-gap: 50px;
    }
}
@media (max-width:992px){
    .about-numbers .thecont .space .headerandboxes  .boxescont .box{
        flex-basis: 100%;
    }
    .about-numbers{
        background-position: 0% 0%;
    }
}





/* events */
.events{
    background-image: url("../PHOTOS/waves-end.png");
    background-position: 10% 45%;
    background-size: cover;
    padding-top: 150px;
    padding-bottom: 150px;
}
.events .evet-cont {
    width: calc(100% - 150px);
    margin: 10px auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    row-gap: 50px;
}
/* ... */

